# docpilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docpilot/: __init__.py  exceptions.py  mcp_server.py
docpilot/builder/: __init__.py  base.py  docx_analyzer.py  docx_builder.py  hwpx_analyzer.py  hwpx_builder.py  pdf_builder.py
docpilot/db/: __init__.py  client.py  indexer.py  schema.py
docpilot/ingestion/: __init__.py  docx.py  hwpx.py  image.py  models.py  pdf.py  pptx.py  text.py
docpilot/mapping/: __init__.py  base.py  benchmark.py  claude.py  gemini.py  openai.py  openai_compat.py  rag.py
docpilot/search/: __init__.py  embedding.py  exact.py  models.py  morpheme.py
docpilot/template_generator/: __init__.py  analyzer.py  docx_extractor.py  extractor.py  generator.py
docpilot/templates/base/: settings.xml  version.xml
docpilot/templates/base/Contents/: content.hpf  header.xml  section0.xml
docpilot/templates/gonmun/: header.xml  section0.xml
docpilot/templates/minutes/: header.xml  section0.xml
docpilot/templates/proposal/: header.xml  section0.xml
docpilot/templates/report/: header.xml  section0.xml
example/: run.py
tests/: conftest.py  test_analyzers.py  test_builder.py  test_indexer.py  test_ingestion.py  test_mapping.py  test_search.py  test_template_generator.py
tests/mocks/: db_mock.py  llm_mock.py
